# dotfiles

./: .gitignore  .gitmodules  .vimrc  .zshrc  _gitconfig  _textlintrc  _tmux.conf  _tool-versions  _vimrc  _zshrc  setup.sh
_config/configstore/: update-notifier-npm-check-updates.json  update-notifier-npm.json
_config/k9s/: config.yml
_config/nvim/: dein.toml  dein_lazy.toml  ft.vim  init.vim  mapping.rc.vim  options.rc.vim  provider.vim
_config/nvim/dein/: dein.rc.vim  dein.toml  dein_lsp.toml
_config/nvim/dein/minimum/: dein.toml
_config/nvim/min/: dein_lazy.toml
_config/nvim/nvim/: ft.vim
_config/nvim/nvim/plugins/: deoplete.vim
_config/nvim/plugins/: deoplete.vim  lightline.vim
_config/textlint/: prh.yaml
_config/vim/: _vimrc  dein.rc.vim  dein_vim.toml  mapping.rc.vim  options.rc.vim
_config/vim/dein/: dein.rc.vim  dein.toml  dein_lsp.toml  dein_nvim.toml  dein_vim.toml
_config/vim/nvim/: indent_ft.vim  init.vim  mapping.rc.vim  provider.vim
_config/vim/ovim/: _vimrc  cheetsheet.md  ft.vim  mapping.rc.vim  options.rc.vim  python.vim
_config/yarn/global/: package.json
_config/zsh/: mac.zsh  p10k.zsh  wsl.zsh  zalias  zalias.zsh  zexport  zexport.zsh  zinit  zinit.zsh  zplugin_lazy  zplugin_zplug  zprompt
neovim/neovim-python2/: pyproject.toml
neovim/neovim-python3/: pyproject.toml
scripts/: asdf.sh  brew_list.sh  brew_ubuntu.sh  nvim.sh  pipenv.sh  poetry.sh  provision.sh  pyenv.sh  textlint.sh  vim.sh  wsltty_shortcut.txt  yarn.sh  zinit.sh
scripts/tmux/: tmux_migration.py
zfiles/: .zexports  .zplugin  solarized256.dircolors
(+5 files in other folders)
