[tool.poetry]
name = "neovim-python2"
version = "0.1.0"
description = ""
authors = ["kefi550"]

[tool.poetry.dependencies]
python = "^2.7"
neovim = "^0.3.1"
pynvim = "^0.4.1"
trollius = "^2.2.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

