[tool.poetry]
name = "neovim-python3"
version = "0.1.0"
description = ""
authors = ["kefi550"]

[tool.poetry.dependencies]
python = "^3.8"
pynvim = "*"
neovim = "*"
python-language-server = "*"
importlib_metadata = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

